# jarvis

./: .env.example  .env.local  .eslintrc.cjs  .gitignore  00_READ_ME_FIRST.txt  APP_LAUNCH_GUIDE.md  BUILD_AND_RUN.md  BUILD_PRODUCTION.bat  CLEANUP_PLAN.md  CONSCIOUSNESS_ENGINE_IMPLEMENTATION.md  CONSCIOUSNESS_FULL_STACK_CONNECTION_MAP.md  CONSCIOUSNESS_QUICK_START.md  ENTERPRISE_PROTOCOL_MANIFEST.md  FINAL_FUNCTION_AUDIT_AND_GAPS.md  FINAL_STATUS.md  GITHUB_REPOS_COMPARATIVE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  JARVIS_VS_IRIS_COMPARISON.md  KNOWLEDGE_SYSTEM_IMPLEMENTATION_SUMMARY.md  MEDIA_STUDIO_IMPLEMENTATION_PLAN.md  OPENJARVIS_COMPARISON_AND_PARITY.md  PROJECT_PLAN.md  PROTOCOL_ACTIVATION_GUIDE.md  QUICK_COMMANDS.md  README.md  REMOTE_WORKER_CONTRACT.md  REPO_INTEGRATION_SUMMARY_AND_PLAN.md  RUN_APP.bat  SETUP_READY.md  SIMULATION_ENGINE_COMPLETION.md  SOUL.md  START_DEV.bat  START_HERE.md  SUPABASE_PHASE3_SCHEMA.sql  SUPABASE_PHASE9_SCHEMA.sql  V4_PROTOCOL_GAPS_COMPLETED.md  VOICE_COMMAND_REFERENCE_AND_TESTING.md  VOICE_EMOTION_INTEGRATION_AUDIT.md  VOICE_IMPLEMENTATION_GUIDE.md  WORKSTREAM_IMPLEMENTATION_STATUS.md  (+15 more)
python/: .gitignore  README.md  pyproject.toml
python/Pixi/: __init__.py  main.py
python/Pixi/agent_swarm_lab/: __init__.py  agent_executor.py  (+6 more)
python/Pixi_ai_system/: __init__.py  main.py
python/docs/: KNOWLEDGE_SYSTEM.md  KNOWLEDGE_SYSTEM_QUICK_REFERENCE.py
python/examples/: knowledge_system_examples.py
python/jarvis/: __init__.py  main.py
python/jarvis_ai_system/: __init__.py  main.py
python/tests/: test_knowledge_system.py
(+942 files in other folders)
