[project]
name = "Pixi-os"
version = "0.1.0"
description = "Pixi AI operating system runtime scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pixi Team" }
]
dependencies = []

[project.scripts]
Pixi = "Pixi.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Pixi"]

[tool.setuptools.package-dir]
Pixi = "Pixi"

